# admet-predictor

./: .gitignore  Makefile  README.md  pip.conf  pyproject.toml
configs/data/: admet_tasks.yaml
configs/model/: attentivefp_base.yaml
scripts/: download_data.py  preprocess_data.py  train.py
src/admet_predictor/: __init__.py
src/admet_predictor/api/: main.py  middleware.py
src/admet_predictor/api/routes/: batch.py  explain.py  predict.py
src/admet_predictor/api/schemas/: __init__.py  requests.py  responses.py
src/admet_predictor/data/: __init__.py  datamodule.py  dataset.py  download.py  featurize.py  splitter.py  standardize.py
src/admet_predictor/evaluation/: __init__.py  calibration.py  metrics.py  uncertainty_eval.py
src/admet_predictor/inference/: __init__.py  applicability.py  attribution.py  predictor.py
src/admet_predictor/losses/: __init__.py  evidential.py  gradnorm.py
src/admet_predictor/models/: __init__.py  admet_model.py  bert_encoder.py  fusion.py  graph_encoder.py  task_heads.py  uncertainty.py
src/admet_predictor/training/: __init__.py  callbacks.py  train.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_featurize.py  test_losses.py  test_models.py
